syntax = "proto3";

option csharp_namespace = "EdgeService.gRPC.CloudConnector";
import "google/protobuf/timestamp.proto";

package message;

service EdgeMessage {
  rpc Send (CloudRequest) returns (CloudResponse);
}

message CloudRequest {
  string data = 1;
  google.protobuf.Timestamp _sendTime=2;
  google.protobuf.Timestamp _edgeReceivedTime=3;
}

message CloudResponse {
  google.protobuf.Timestamp _receivedTime=1;
}
